--- a/StoryFinder/app/src/main/res/layout/fragment_storylist.xml
+++ b/StoryFinder/app/src/main/res/layout/fragment_storylist.xml
@@ -1,6 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -21,32 +19,46 @@
             android:padding="16dp"
             android:layout_height="120dp">
 
-            <ImageView
+            <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/card_image"
-                android:layout_height="wrap_content"
+                android:layout_height="100dp"
                 android:src="@drawable/triforce"
-                android:layout_alignParentLeft="true"
-                android:layout_gravity="left"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
                 android:padding="1dp"
-                android:layout_width="170dp"/>
+                android:layout_width="100dp"
+                android:layout_marginEnd="20dp"
+                />
 
             <TextView
                 android:id="@+id/card_story_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/card_image"
+                android:layout_toEndOf="@+id/card_image"
                 android:layout_alignParentTop="true"
-                android:textSize="12sp"
+                android:textSize="20sp"
                 />
 
             <TextView
-                android:id="@+id/card_story_description"
+                android:id="@+id/card_rating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@+id/card_image"
                 android:layout_below="@+id/card_story_title"
                 android:textSize="12sp"
                 />
+
+            <RatingBar
+                android:id="@+id/card_ratingBar"
+                style="?attr/ratingBarStyleSmall"
+                android:theme="@style/RatingBar"
+                android:numStars="10"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/card_rating"
+                android:layout_toEndOf="@id/card_image"
+                />
+
 
         </RelativeLayout>
 
