--- a/StoryFinder/app/src/main/res/values/colors.xml
+++ b/StoryFinder/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#cde1f0</color>
     <color name="gray">#444440</color>
+    <color name="gold_yellow">#FFDF00</color>
 </resources>
