--- a/StoryFinder/app/src/main/res/values/styles.xml
+++ b/StoryFinder/app/src/main/res/values/styles.xml
@@ -15,6 +15,10 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@drawable/mastersword</item>
     </style>
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/cardview_shadow_end_color</item>
+        <item name="colorControlActivated">@color/gray</item>
+    </style>
 
 </resources>
 
