--- a/StoryFinder/app/src/main/res/layout/fragment_story.xml
+++ b/StoryFinder/app/src/main/res/layout/fragment_story.xml
@@ -1,96 +1,160 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:app="http://schemas.android.com/apk/res-auto"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:background="@color/colorPrimary"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:weightSum="1">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="4dp"
+    android:background="@color/colorPrimary"
+    android:weightSum="1">
 
-    <com.android.volley.toolbox.NetworkImageView
-        android:id="@+id/storyImageView"
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:src="@drawable/card"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/titleTextView"
-        android:layout_height="wrap_content"/>
-
-
-    <ScrollView
-        android:id="@+id/SCROLLER_ID"
-        android:layout_width="fill_parent"
-        android:scrollbars="vertical"
-        android:fillViewport="true"
-        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/imageCard"
+        android:padding="16dp"
+        android:orientation="horizontal"
         android:layout_alignParentStart="true"
-        android:layout_height="200dp">
+        card_view:cardBackgroundColor="@color/cardview_shadow_start_color"
+        card_view:cardElevation="4dp"
+        >
 
-        <TextView
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:padding="16dp"
+            android:layout_height="210dp"
+            android:layout_alignParentTop="true"
+            >
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/storyImageView"
+                android:layout_width="match_parent"
+                android:src="@drawable/card"
+                android:background="@color/colorPrimary"
+                android:layout_alignParentTop="true"
+                android:layout_height="match_parent"/>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/detailsCard"
+        android:padding="16dp"
+        android:orientation="horizontal"
+        card_view:cardBackgroundColor="@color/cardview_shadow_start_color"
+        card_view:cardElevation="4dp"
+        android:layout_below="@+id/imageCard"
+        >
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:id="@+id/descTextView"
-            android:text="@string/story_details_label"
-            style="?android:listSeparatorTextViewStyle"
-            android:background="@color/colorPrimary"
             android:layout_height="wrap_content"
+            android:padding="16dp"
+            >
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/story_title_label"
+                style="?android:listSeparatorTextViewStyle"
+                android:background="@color/colorAccent"
+                android:layout_weight="0.1"
+                android:layout_alignParentStart="true"/>
+            <TextView
+                android:id="@+id/language_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Language"
+                style="?android:listSeparatorTextViewStyle"
+                android:background="@color/colorAccent"
+                android:layout_weight="0.1"
+                android:layout_alignParentStart="true"/>
 
+            <TextView
+                android:id="@+id/genre_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Genre"
+                style="?android:listSeparatorTextViewStyle"
+                android:background="@color/colorAccent"
+                android:layout_weight="0.1"
+                android:layout_below="@+id/language_label"
+                android:layout_alignParentStart="true"/>
 
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"/>
-    </ScrollView>
+            <TextView
+                android:id="@+id/runtime_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Runtime"
+                style="?android:listSeparatorTextViewStyle"
+                android:background="@color/colorAccent"
+                android:layout_weight="0.1"
+                android:layout_below="@+id/genre_label"
+                android:layout_alignParentStart="true"/>
 
-    <TextView
-        android:id="@+id/rating_label"
+            <TextView
+                android:id="@+id/rating_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Rating"
+                style="?android:listSeparatorTextViewStyle"
+                android:background="@color/colorAccent"
+                android:layout_weight="0.1"
+                android:layout_below="@+id/runtime_label"
+                android:layout_alignParentStart="true"/>
+
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+    <android.support.v7.widget.CardView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Rating"
-        style="?android:listSeparatorTextViewStyle"
-        android:background="@color/colorAccent"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/SCROLLER_ID"
-        android:layout_alignParentStart="true"/>
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/summaryCard"
+        android:padding="16dp"
+        android:orientation="horizontal"
+        card_view:cardBackgroundColor="@color/cardview_shadow_start_color"
+        card_view:cardElevation="4dp"
 
-    <TextView
-        android:id="@+id/runtime_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Runtime"
-        style="?android:listSeparatorTextViewStyle"
-        android:background="@color/colorAccent"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/rating_label"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentBottom="true"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:padding="16dp"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/genre_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Genre"
-        style="?android:listSeparatorTextViewStyle"
-        android:background="@color/colorAccent"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/runtime_label"
-        android:layout_alignParentStart="true"/>
+            <ScrollView
+                android:id="@+id/SCROLLER_ID"
+                android:layout_width="fill_parent"
+                android:scrollbars="vertical"
+                android:fillViewport="true"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/language_label"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Language"
-        style="?android:listSeparatorTextViewStyle"
-        android:background="@color/colorAccent"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/genre_label"
-        android:layout_alignParentStart="true"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:id="@+id/descTextView"
+                    android:text="@string/story_details_label"
+                    style="?android:listSeparatorTextViewStyle"
+                    android:background="@color/colorPrimary"
+                    android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/story_title_label"
-        style="?android:listSeparatorTextViewStyle"
-        android:background="@color/colorAccent"
-        android:layout_weight="0.1"
-        android:layout_above="@+id/language_label"
-        android:layout_alignParentStart="true"/>
-</RelativeLayout>
+
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"/>
+            </ScrollView>
+        </RelativeLayout>
+    </android.support.v7.widget.CardView>
+
+</LinearLayout>
+
