--- a/StoryFinder/app/src/main/res/layout/fragment_storylist.xml
+++ b/StoryFinder/app/src/main/res/layout/fragment_storylist.xml
@@ -3,49 +3,62 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="280dp"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_story_view"
-    android:padding="16dp"
     android:orientation="horizontal"
     card_view:cardBackgroundColor="@color/cardview_shadow_end_color"
-    card_view:cardElevation="4dp"
-    card_view:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true"
+    app:cardPreventCornerOverlap="false"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="4dp"
     >
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:padding="16dp"
-            android:layout_height="120dp">
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            >
 
             <com.android.volley.toolbox.NetworkImageView
                 android:id="@+id/card_image"
-                android:layout_height="100dp"
-                android:src="@drawable/triforce"
-                android:layout_alignParentStart="true"
+                android:src="@drawable/mastersword"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:scaleType="fitXY"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"
                 android:layout_centerVertical="true"
-                android:padding="1dp"
-                android:layout_width="100dp"
-                android:layout_marginEnd="20dp"
+
                 />
 
             <TextView
                 android:id="@+id/card_story_title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/card_image"
-                android:layout_alignParentTop="true"
-                android:textSize="20sp"
+                android:layout_above="@+id/card_rating"
+                android:textSize="18sp"
+                android:textColor="#ffff"
+                android:background="#8000"
+                android:paddingBottom="12dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:paddingTop="24dp"
+                android:alpha="0.8"
                 />
 
             <TextView
                 android:id="@+id/card_rating"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/card_image"
-                android:layout_below="@+id/card_story_title"
-                android:textSize="12sp"
+                android:layout_above="@+id/card_ratingBar"
+                android:textSize="14sp"
+                android:textColor="#ffff"
+                android:background="#8000"
+                android:paddingBottom="4dp"
+                android:paddingLeft="12dp"
+                android:paddingRight="12dp"
+                android:alpha="0.8"
                 />
 
             <RatingBar
@@ -53,10 +66,16 @@
                 style="?attr/ratingBarStyleSmall"
                 android:theme="@style/RatingBar"
                 android:numStars="10"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/card_rating"
-                android:layout_toEndOf="@id/card_image"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:background="#8000"
+                android:paddingBottom="8dp"
+                android:paddingTop="4dp"
+                android:paddingRight="4dp"
+                android:paddingLeft="4dp"
+                android:alpha="0.8"
                 />
 
 
