--- a/StoryFinder/app/src/main/res/layout/fragment_storylist_list.xml
+++ b/StoryFinder/app/src/main/res/layout/fragment_storylist_list.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
@@ -8,13 +8,13 @@
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginLeft="4dp"
-        android:layout_marginRight="4dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
+        android:background="@color/white"
         app:layoutManager="LinearLayoutManager"
         tools:listitem="@layout/fragment_storylist"
-        android:background="@color/colorAccent"
-        android:layout_margin="4dp"
+        android:layout_margin="0dp"
         android:id="@+id/story_recycler_view"/>
 
-</LinearLayout>
+</GridLayout>
