--- a/StoryFinder/app/src/main/res/values/colors.xml
+++ b/StoryFinder/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#cde1f0</color>
     <color name="gray">#444440</color>
     <color name="gold_yellow">#FFDF00</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffff</color>
 </resources>
