--- a/StoryFinder/app/src/main/res/values/styles.xml
+++ b/StoryFinder/app/src/main/res/values/styles.xml
@@ -19,6 +19,10 @@
         <item name="colorControlNormal">@color/cardview_shadow_end_color</item>
         <item name="colorControlActivated">@color/gold_yellow</item>
     </style>
+    <style name="AppTheme.ActionBar.Transparent" parent="AppTheme">
+        <item name="colorPrimary">@android:color/transparent</item>
+    </style>
+
 
 </resources>
 
