--- a/StoryFinder/app/src/main/res/layout/fragment_story.xml
+++ b/StoryFinder/app/src/main/res/layout/fragment_story.xml
@@ -9,20 +9,11 @@
     >
 
 
-            <com.android.volley.toolbox.NetworkImageView
-                android:id="@+id/storyImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/mastersword"
-                android:scaleType="centerCrop"
-                android:fitsSystemWindows="true"
-                app:layout_collapseMode="parallax"
-                />
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/main.appbar"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="544dp"
         android:theme="@style/AppTheme.ActionBar.Transparent"
         >
 
@@ -35,6 +26,15 @@
             app:expandedTitleMarginStart="48dp"
             app:expandedTitleMarginEnd="64dp"
             >
+            <com.android.volley.toolbox.NetworkImageView
+                android:id="@+id/storyImageView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/mastersword"
+                android:scaleType="centerCrop"
+                android:fitsSystemWindows="true"
+                app:layout_collapseMode="parallax"
+                />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
@@ -49,7 +49,6 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:padding="16dp"
             android:layout_height="wrap_content">
 
 
@@ -59,41 +58,71 @@
                 android:layout_height="wrap_content"
                 android:text="@string/story_title_label"
                 style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
+                android:textSize="32sp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:lineSpacingExtra="8dp"
                 android:textColor="#ffff"
+                />
+            <TextView
+                android:id="@+id/descTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/titleTextView"
+                android:text="@string/story_details_label"
+                style="?android:listSeparatorTextViewStyle"
+                android:textSize="12dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="16dp"
+                android:textColor="#ffff"
+                android:lineSpacingExtra="8dp"
+                />
+            <TextView
+                android:id="@+id/genre_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/descTextView"
+                android:text="Genre"
+                style="?android:listSeparatorTextViewStyle"
+                android:textSize="16sp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="0dp"
+                android:paddingRight="0dp"
+                android:textColor="#ffff"
+                android:lineSpacingExtra="8dp"
                 />
             <TextView
                 android:id="@+id/language_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/titleTextView"
+                android:layout_below="@+id/genre_label"
                 android:text="Language"
                 style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:textColor="#ffff"
                 android:lineSpacingExtra="8dp"
                 />
 
             <TextView
-                android:id="@+id/genre_label"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/language_label"
-                android:text="Genre"
-                style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
-                android:textColor="#ffff"
-                android:lineSpacingExtra="8dp"
-                />
-            <TextView
                 android:id="@+id/runtime_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/genre_label"
+                android:layout_below="@id/language_label"
                 android:text="Runtime"
                 style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:textColor="#ffff"
                 android:lineSpacingExtra="8dp"
                 />
@@ -105,24 +134,16 @@
                 android:layout_below="@+id/runtime_label"
                 android:text="Rating"
                 style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
+                android:textSize="16sp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:textColor="#ffff"
                 android:lineSpacingExtra="8dp"
                 />
 
 
-            <TextView
-                android:id="@+id/descTextView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/rating_label"
-                android:text="@string/story_details_label"
-                style="?android:listSeparatorTextViewStyle"
-                android:textSize="20sp"
-                android:textColor="#ffff"
-                android:lineSpacingExtra="8dp"
-
-                />
         </RelativeLayout>
 
     </android.support.v4.widget.NestedScrollView>
