--- a/StoryFinder/app/src/main/res/menu/menu.xml
+++ b/StoryFinder/app/src/main/res/menu/menu.xml
@@ -9,4 +9,12 @@
         android:title="@string/search_title"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_location"
+        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_compass"
+        android:title="Location"
+        app:showAsAction="ifRoom"
+        android:onClick="onOptionsItemSelected"
+        />
 </menu>
